# FILE-BACKUP

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.78ad6a5  README.md  backup.cpp  backup.h  backup.ui  choose.cpp  choose.h  choose.ui  filecompressor.cpp  filecompressor.h  fileinfo.cpp  fileinfo.h  filepacker.cpp  image.qrc  inoderecorder.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  register1.cpp  register1.h  register1.ui  up_down.cpp  up_down.h  updownload.cpp  updownload.h
